# MLOps_team21_final

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Jenkinsfile  Makefile  README.md  pyproject.toml  requirements.txt  service_account.json  setup.cfg
.dvc/: config
data/raw/: .gitignore  titanic.csv.dvc  titanic_binned.csv.dvc  titanic_noise.csv.dvc  titanic_noname.csv.dvc  titanic_original.csv.dvc
jenkins/: Jenkinsfile
src/: __init__.py  api.py  config.py
src/pipeline/: download_data.py
src/services/: predict.py  process_dataset.py  process_datasets.py
src/services/model_pipeline/: pipeline.py  preprocess_data.py  test_model.py  train_model.py
src/utils/logger/: logger_config.py
tests/: test_data_quality.py  test_endpoints.py
