[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops_team21"
version = "0.0.1"
description = "Titanic survival model"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]

[[tool.mypy.overrides]]
module = ["foobar.*"]
ignore_missing_imports = true